kubernetes/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-project-frontend
  namespace: kiii-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kiii-project-frontend
  template:
    metadata:
      labels:
        app: kiii-project-frontend
    spec:
      containers:
        - name: frontend
          image: prodanovg/kiii-2025-project-frontend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: kiii-project-frontend-service
  namespace: kiii-project
spec:
  selector:
    app: kiii-project-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
