kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiii-project-service
  namespace: kiii-project
spec:
  selector:
    app: kiii-project
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
