kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiii-project-ingress
  namespace: kiii-project
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: kiii.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kiii-project-backend-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiii-project-frontend-service
                port:
                  number: 80
